--- a/index.html
+++ b/index.html
@@ -551,12 +551,16 @@
     </div>
     <!-- layout end -->
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9J4EXQLZS8"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9J4EXQLZS8');
+    </script>
    
-
-
-
-
-
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
